# anime-database-lib

./: .gitignore  Cargo.toml  README.md
src/: database.rs  episode.rs  imports.rs  lib.rs  main.rs
