[package]
name = "anime-database-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.10.2"
rusqlite = { version = "0.30.0", features = ["bundled"] }
thiserror = "1.0.50"
walkdir = "2.4.0"
